--- a/writing/Cubert/Cubert manuscript.v4.tex
+++ b/writing/Cubert/Cubert manuscript.v4.tex
@@ -950,8 +950,8 @@ To generate predictions, we need to fix various parameter settings within the mo
 Each state, $s$, consists of three objects, each of which has degree $3$ or $4$. The prior on states $P(s)$ was taken to be uniform. The distributive threshold $\theta_d$ was uniformly $3$ or $4$ (the two possible object degrees). The collective threshold $\theta_c$ was uniformly drawn from the possible total degrees, $\{9,10,11,12\}$. %\ndg{should really be uniform, not state prior.}
 %ranged over state degrees (i.e., 6, 7 8), and was drawn uniformly from the state prior.
 %The priors on state $P(s)$ and on thresholds $P(\theta_d,\theta_c)$ are taken to be uniform. \ndg{check}
-We take $P(v)$ to be Bernoulli with a single free parameter (i.e., the prior bias toward collective interpretations); this parameter was set to $0.8$. \gcs{okay to simply ``set'' the parameter?}
-We take the cost $C(u)$ to be $1$ for the ambiguous utterance and $2$ for both of the unambiguous utterances---a reasonable assumption from the point of view of production, given that unambiguous utterances contain an extra word (i.e., \emph{each} or \emph{together}). The parameter $\alpha > 0$ controls the speaker's optimality; we set $\alpha$ to $7$. \gcs{okay to ``set'' alpha?}
+We take $P(v)$ to be Bernoulli with a single free parameter (i.e., the prior bias toward collective interpretations); this parameter was set to $0.8$. 
+We take the cost $C(u)$ to be $1$ for the ambiguous utterance and $2$ for both of the unambiguous utterances---a reasonable assumption from the point of view of production, given that unambiguous utterances contain an extra word (i.e., \emph{each} or \emph{together}). The parameter $\alpha > 0$ controls the speaker's optimality; we set $\alpha$ to $7$. 
 Importantly, the qualitative patterns reported below are robust to changes in these parameters and assumptions.
 
 %\ndg{what about alpha?}
@@ -1011,7 +1011,7 @@ In Fig.~\ref{modelresults}, we plot the probability that the interpretation-reso
 %%\subsection{Model predictions}
 
 
-The qualitative predictions of our plural predication model match the hypotheses and experimental results that motivated the model. Most striking is the monotonic decrease in probability of collective interpretations as collective noise increases (red bars in  Fig.~\ref{modelresults}). We now have a formal understanding as to why this effect holds: the noisier the collective interpretation, the less likely the listener $L_{0}$ is to correctly resolve the question under discussion, namely the properties of the named boxes $s$. Given that the speaker $S_{1}$'s goal is to successfully communicate $s$ to $L_{0}$, the noisier an interpretation, the less useful it is at achieving this goal; the speaker is therefore less likely to intend this interpretation, and as a result the pragmatic listener $L_{1}$ is less likely to infer it.
+The qualitative predictions of our plural predication model match the hypotheses and experimental results that motivated the model. Most striking is the monotonic decrease in probability of collective interpretations as collective noise increases (red bars in  Fig.~\ref{modelresults}). We now have a formal understanding as to why this effect holds: the noisier the collective interpretation, the less likely the listener $L_{0}$ is to correctly resolve the question under discussion, namely the properties of the named boxes $s$. Given that the speaker $S_{1}$'s goal is to successfully communicate $s$ to $L_{0}$, the noisier an interpretation, the less useful it is at achieving this goal; the speaker is therefore less likely to use the ambiguous utterance, and as a result the pragmatic listener $L_{1}$ is less likely to infer that the ambiguous utterance, when used, meant the noisy collective meaning.
 
 The model also successfully predicts the qualitative increase in the probability of a collective interpretation when the speaker's  access to individual object properties is limited (blue vs.~red bars in  Fig.~\ref{modelresults}). %With only partial access to the actual state $s$, $S_{1}$ is less likely to have precise information concerning $s$ about which to communicate. 
 $L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speaker has full or partial knowledge. In the case of partial (i.e., sum)  knowledge, a distributive interpretation lacks epistemic support, and therefore becomes less likely; as a result, collective interpretations become more likely.
@@ -1029,7 +1029,7 @@ To compare the quantitative predictions of our model with the results of Expt.~3
 %sum-only knowledge for \emph{heavy} in ``move'' conditions, but not other cases.
 %With 
 %With so many free parameters 
-we would not want to claim that the model uniquely, quantitatively predicts the data. Future work will need to experimentally measure the appropriate noise values and do parametric manipulations of the conditions.
+we would not want to claim that the model uniquely, quantitatively predicts the data. Future work will need to experimentally measure the appropriate noise values and ideally do parametric manipulations of the conditions.
 
 %To compare our model to the data from Expt.~3, we fit the variance of $P(c)$ for each predicate and each arrangement condition (i.e., \texttt{regular} vs.~\texttt{random}). For \emph{heavy} in the ``move'' condition, we assume access to knowledge of only the sum of weights (not the individual weights); full knowledge is assumed for other predicates.
 %sum-only knowledge for \emph{heavy} in ``move'' conditions, but not other cases. The best fit variance values are as follows: \emph{heavy} \texttt{regular}/\texttt{random}: $\sigma=0.7$; \emph{big}/\emph{tall} \texttt{random}: $\sigma=3$; \emph{big} \texttt{regular}: $\sigma=1$; \emph{tall} \texttt{regular}: $\sigma=0.1$. 
