--- a/writing/Cubert/Cubert manuscript.v4.tex
+++ b/writing/Cubert/Cubert manuscript.v4.tex
@@ -144,14 +144,13 @@
 
 \begin{abstract}
 %% Text of abstract
-\ndg{needs another pass} \gcs{gave it another pass}
 Plural predications (e.g., ``the boxes are heavy'') are common sources of ambiguity in everyday language, allowing both distributive and collective interpretations (e.g., the boxes each are heavy vs.~the boxes together are heavy).
-This paper investigates the role of context in the disambiguation of plural predications.  
+This paper investigates the role of context in the disambiguation of plural predication.  
 We address the key phenomenon of ``stubborn distributivity,'' whereby certain predicates (e.g., \emph{big}, \emph{tall}) are claimed to lack collective interpretations altogether. 
 We first validate a new methodology for measuring the interpretation of plural predications.
 Using this method, we then analyze naturally-occurring plural predications from corpora. We find a role of context, but no evidence of a distinct class of predicates that resists collective interpretations.
 We further explore the role of context in our final experiment, showing that both the predictability of properties and the knowledgeability of the speaker affect disambiguation.
-This suggests a pragmatic account of how ambiguous plural predications get interpreted. 
+This suggests a pragmatic account of how ambiguous plural predications are interpreted. 
 In particular, stubbornly distributive predicates are so because the collective properties they name are unpredictable, or unstable, in most contexts; this unpredictability results in a noisy collective interpretation, something speakers and listeners recognize as ineffective for communicating efficiently about their world.
 We formalize the pragmatics of utterance disambiguation within the Bayesian Rational Speech-Acts framework.\\ 
 %, showing how stubborn distributivity emerges from properties of context and the reasoning processes of speakers and listeners: speakers prefer more stable, more potentially informative utterances; listeners understand speakers’ preferences and use this understanding as they interpret utterances.\\
