--- a/writing/Cubert/Cubert manuscript.v4.tex
+++ b/writing/Cubert/Cubert manuscript.v4.tex
@@ -944,7 +944,7 @@ The plural predication is both ambiguous ($v$) and vague ($\theta_{c}$, $\theta_
 
 %\ndg{what is the list of all parameters fit? $P(v)$, $C(u)$... anything else? do these results still use only two values of the degrees (3 and 4)? which $P(c)$ is used for these predictions? is it fit to the data?}
 
-To generate predictions, we need to fix various parameter settings within the model; we aim to make the simplest choices possible, focussing on qualitative predictions.\footnote{The full model is viewable online at \url{http://forestdb.org/models/plural-predication.html}. \ndg{note: update code to most clearly reflect final model description.}}
+To generate predictions, we need to fix various parameter settings within the model; we aim to make the simplest choices possible, focussing on qualitative predictions.\footnote{The full model is viewable online at \url{http://forestdb.org/models/plural-predication.html}.} %\ndg{note: update code to most clearly reflect final model description.}}
 %Here we fill in more details of these settings, with the caveat that the qualitative model results presented below are robust to a broad range of parameter settings; the specific values we give here are used merely to demonstrate the general behavior and success of the model.\footnote{XXX specifics about the range of parameter settings that are possible, and the settings that are not.\label{parameter}}
 Each state, $s$, consists of three objects, each of which has degree $3$ or $4$. The prior on states $P(s)$ was taken to be uniform. The distributive threshold $\theta_d$ was uniformly $3$ or $4$ (the two possible object degrees). The collective threshold $\theta_c$ was uniformly drawn from the possible total degrees, $\{9,10,11,12\}$. %\ndg{should really be uniform, not state prior.}
 %ranged over state degrees (i.e., 6, 7 8), and was drawn uniformly from the state prior.
