fixed appendix references

--- a/writing/Cubert/Cubert manuscript.v4.tex
+++ b/writing/Cubert/Cubert manuscript.v4.tex
@@ -440,11 +440,11 @@ However, given that Cubert would need to lift individual boxes to assess their i
 
 Results were coded in terms of whether participants chose the collective referent, and therefore the collective interpretation for Cubert's statement to Dot. Fig.\ \ref{results2} displays the proportion of collective choices, with bootstrapped 95\% confidence intervals drawn from 10,000 samples of the data \citep{diciccioefron1996}; a value of 1 indicates that participants chose the collective referent 100\% of the time.
 
-To evaluate the disambiguating potential of our paraphrases, we first look at responses to these paraphrases, excluding the bare utterance. Mean proportion of collective referent choice for collective paraphrases with \emph{together} was 85\% (i.e., near ceiling); for distributive paraphrases with \emph{each} this proportion was 10\% (i.e., near floor). We fit a mixed effects logistic regression model \citep{baayenetal2008} using the \emph{lme4} package \citep{batesetal2014} in \emph{R}, predicting referent choice by \textsc{utterance} (``each,'' ``together'') and its interaction with \textsc{predicate} (\emph{big}, \emph{heavy}, \emph{tall}; \emph{big} was coded as the reference level), as well as \textsc{trial} order.  The model included random intercepts for participants and scenarios (i.e., the maximal random effects structure supported by the data). The full regression model appears in Appendix \ref{expt1results}. The model finds a main effect of \textsc{utterance} ($\beta$ = 4.99, $SE$ = 0.82, $z$ = 6.08, p $<$ 0.001), confirming that collective \emph{together} yielded greater rates of collective referent choice than distributive \emph{each}; the interactions with \textsc{predicate} were not significant (\emph{heavy}: $\beta$ = -1.39, $SE$ = 0.91, $z$ = -1.52, p $=$ 0.13; \emph{tall}: $\beta$ = -0.63, $SE$ = 0.95, $z$ = -0.66, p $=$ 0.51). The effect of \textsc{trial} was also not significant ($\beta$ = 0.07, $SE$ = 0.07, $z$ = 1.00, p $=$ 0.32). Thus, the ``together'' utterances yielded collective referent choices, and the ``each'' utterances did not, for each of the three predicates.
+To evaluate the disambiguating potential of our paraphrases, we first look at responses to these paraphrases, excluding the bare utterance. Mean proportion of collective referent choice for collective paraphrases with \emph{together} was 85\% (i.e., near ceiling); for distributive paraphrases with \emph{each} this proportion was 10\% (i.e., near floor). We fit a mixed effects logistic regression model \citep{baayenetal2008} using the \emph{lme4} package \citep{batesetal2014} in \emph{R}, predicting referent choice by \textsc{utterance} (``each,'' ``together'') and its interaction with \textsc{predicate} (\emph{big}, \emph{heavy}, \emph{tall}; \emph{big} was coded as the reference level), as well as \textsc{trial} order.  The model included random intercepts for participants and scenarios (i.e., the maximal random effects structure supported by the data). The full regression model appears in \ref{expt1results}. The model finds a main effect of \textsc{utterance} ($\beta$ = 4.99, $SE$ = 0.82, $z$ = 6.08, p $<$ 0.001), confirming that collective \emph{together} yielded greater rates of collective referent choice than distributive \emph{each}; the interactions with \textsc{predicate} were not significant (\emph{heavy}: $\beta$ = -1.39, $SE$ = 0.91, $z$ = -1.52, p $=$ 0.13; \emph{tall}: $\beta$ = -0.63, $SE$ = 0.95, $z$ = -0.66, p $=$ 0.51). The effect of \textsc{trial} was also not significant ($\beta$ = 0.07, $SE$ = 0.07, $z$ = 1.00, p $=$ 0.32). Thus, the ``together'' utterances yielded collective referent choices, and the ``each'' utterances did not, for each of the three predicates.
 %\ndg{should we have predicate be a predictor here so that we can report (whether) the predicate didn't affect choice for the fully dissambiguated phrases?}\gcs{if we have predicate interact with utterance, the interaction is not significant. include?}
 %\gcs{changed around analysis to include interactions with predicate as predictors}
 
-To evaluate the behavior of the predicates in the absence of the disambiguating particles, together with the effect of our scenario manipulation, we next consider responses to the bare, potentially ambiguous utterance. We fit a mixed effects logistic regression model predicting referent choice by \textsc{predicate} (\emph{big}, \emph{heavy}, \emph{tall}), \textsc{scenario} (``move,'' ``inspect''), and \textsc{trial} order. We dummy coded the \textsc{predicate} predictor, with \emph{big} as the reference level. The model included random intercepts and slopes for participants (grouped by \textsc{trial}; the maximal random effects structure supported by the data). The full regression model appears in Appendix \ref{expt1results}. The model finds main effects of \textsc{predicate} for both the \emph{heavy} ($\beta$ = 3.05, $SE$ = 1.23, $z$ = 2.48, p $<$ 0.05) and the \emph{tall} ($\beta$ = 3.63, $SE$ = 1.29, $z$ = 2.82, p $<$ 0.01) contrasts. Compared to \emph{big}, the other predicates yielded greater rates of collective referent choice in ``bare'' utterances. While the effect of \textsc{scenario} did not reach significance, we note the trend in Fig.~\ref{results2} whereby ``move'' scenarios tended to have higher rates of collective referent choice for bare \emph{heavy} utterances (34\% ``move'' vs.~14\% ``inspect''); a post-hoc test of this difference approaches significance ($t$ = -1.70, \emph{df} = 47.96, $p$ = 0.096).
+To evaluate the behavior of the predicates in the absence of the disambiguating particles, together with the effect of our scenario manipulation, we next consider responses to the bare, potentially ambiguous utterance. We fit a mixed effects logistic regression model predicting referent choice by \textsc{predicate} (\emph{big}, \emph{heavy}, \emph{tall}), \textsc{scenario} (``move,'' ``inspect''), and \textsc{trial} order. We dummy coded the \textsc{predicate} predictor, with \emph{big} as the reference level. The model included random intercepts and slopes for participants (grouped by \textsc{trial}; the maximal random effects structure supported by the data). The full regression model appears in \ref{expt1results}. The model finds main effects of \textsc{predicate} for both the \emph{heavy} ($\beta$ = 3.05, $SE$ = 1.23, $z$ = 2.48, p $<$ 0.05) and the \emph{tall} ($\beta$ = 3.63, $SE$ = 1.29, $z$ = 2.82, p $<$ 0.01) contrasts. Compared to \emph{big}, the other predicates yielded greater rates of collective referent choice in ``bare'' utterances. While the effect of \textsc{scenario} did not reach significance, we note the trend in Fig.~\ref{results2} whereby ``move'' scenarios tended to have higher rates of collective referent choice for bare \emph{heavy} utterances (34\% ``move'' vs.~14\% ``inspect''); a post-hoc test of this difference approaches significance ($t$ = -1.70, \emph{df} = 47.96, $p$ = 0.096).
 
 
 \begin{figure}[h]
@@ -524,7 +524,7 @@ We begin with a look at the range of collective endorsement ratings.\footnote{A 
 There are 8 predicates that occur with multiple nouns in our small corpus; we plot their average collective endorsement ratings in Fig.~\ref{noun-pred-coll}.
 %
 %
-For at least 3 out of these 8 predicates, rates of collective endorsement differ significantly by subject noun (\emph{bright}, \emph{closed}, \emph{small}; see Appendix \ref{2-stats} for details). We draw the reader's attention to the case of stubbornly distributive \emph{small} (bottom right of Fig.~\ref{noun-pred-coll}). 
+For at least 3 out of these 8 predicates, rates of collective endorsement differ significantly by subject noun (\emph{bright}, \emph{closed}, \emph{small}; see \ref{2-stats} for details). We draw the reader's attention to the case of stubbornly distributive \emph{small} (bottom right of Fig.~\ref{noun-pred-coll}). 
 If stubborn distributivity were a binary, predicate-level phenomenon hard-coded into the semantics, we should find no effect of the subject noun in the determination of \emph{smalls}'s distributive vs.~collective interpretations: stubbornly distributive predicates, regardless of their subject, should always be maximally distributive. But this is not the case for \emph{small} in Fig.~\ref{noun-pred-coll}. 
 %More importantly, the subject \emph{numbers} stands out in its relatively high rates of collective endorsement with the predicate \emph{small}. 
 A linear mixed effects model predicting collective endorsement rates by subject noun for \emph{small}, with random by-participant intercepts, finds that sentences with the subject \emph{numbers} received greater rates of collective endorsement than sentences with \emph{children} ($\beta=-0.15$, $SE=0.07$, $t=-2.24$, $p<0.05$), \emph{rooms} ($\beta=-0.19$, $SE=0.07$, $t=-2.73$, $p<0.01$), or \emph{classes} ($\beta=-0.27$, $SE=0.07$, $t=-3.87$, $p<0.01$).\footnote{We find the same pattern of results if instead we compare each subject noun with the grand mean (i.e., through effect, or deviation, coding of our variables): \emph{numbers} deviates significantly, while the other nouns do not.} Curiously, \emph{numbers} names objects that do not instantiate physically, which plausibly increases the predictability of their collective size (i.e., their summation) and thus increases rates of collective interpretations.
@@ -596,7 +596,7 @@ We might take the split in behavior between \emph{heavy} on the one hand and \em
 
 %\ndg{it's not clear to me that the ensuing are the most useful analyses to do... we want to know how judgements vary by noun. it is relevant to know if any nouns differ within predicate, and also whether the ranges of the predicates overlap....}
 
-Next, we compare the behavior of the subject nouns within each predicate.  Starting with \emph{tall}, we fit a linear mixed effects model predicting collective endorsement by subject noun, with random intercepts for participants; full regression models appear in Appendix \ref{2-stats}. The subject noun predictor was dummy coded with \emph{trees} as the reference level (i.e., the subject with the highest average collective endorsement rating). Compared to \emph{trees}, we do not find an effect of the contrast with \emph{plants} ($\beta=0.00$, $SE=0.06$, $t=-0.07$, $p=0.95$), \emph{offspring} ($\beta=-0.03$, $SE=0.06$, $t=-0.55$, $p=0.59$), \emph{buildings} ($\beta=-0.06$, $SE=0.06$, $t=-1.00$, $p=0.32$), or \emph{windows} ($\beta=-0.09$, $SE=0.06$, $t=-1.52$, $p=0.13$). In other words, \emph{tall}'s subjects behave similarly in their general resistance to collective interpretation. 
+Next, we compare the behavior of the subject nouns within each predicate.  Starting with \emph{tall}, we fit a linear mixed effects model predicting collective endorsement by subject noun, with random intercepts for participants; full regression models appear in \ref{2-stats}. The subject noun predictor was dummy coded with \emph{trees} as the reference level (i.e., the subject with the highest average collective endorsement rating). Compared to \emph{trees}, we do not find an effect of the contrast with \emph{plants} ($\beta=0.00$, $SE=0.06$, $t=-0.07$, $p=0.95$), \emph{offspring} ($\beta=-0.03$, $SE=0.06$, $t=-0.55$, $p=0.59$), \emph{buildings} ($\beta=-0.06$, $SE=0.06$, $t=-1.00$, $p=0.32$), or \emph{windows} ($\beta=-0.09$, $SE=0.06$, $t=-1.52$, $p=0.13$). In other words, \emph{tall}'s subjects behave similarly in their general resistance to collective interpretation. 
 
 Turning to \emph{big}, we performed a similar analysis, this time dummy coding \emph{waves} (the subject with the greatest average collective endorsement rating) as the reference level. There were significant effects of each contrast: \emph{rooms} ($\beta=-0.18$, $SE=0.06$, $t=-2.97$, $p<0.01$), \emph{boys} ($\beta=-0.22$, $SE=0.06$, $t=-3.53$, $p<0.01$), \emph{children} ($\beta=-0.21$, $SE=0.06$, $t=-3.54$, $p<0.01$), and \emph{houses} ($\beta=-0.23$, $SE=0.06$, $t=-3.68$, $p<0.01$); \emph{waves} stands out in its relatively high levels of collective endorsement with \emph{big}.
 
@@ -718,7 +718,7 @@ First note the qualitative effects of our two manipulations: collective interpre
 \end{figure}
 
 For each predicate, we fit a linear regression model predicting collective endorsement ratings by \textsc{context} (``random'' vs.~``regular''),
-\textsc{scenario} (``inspect'' vs.~``move''), and \textsc{trial} order; the model also included the interaction between \textsc{context} and \textsc{scenario}.\footnote{All reported results hold if instead we look at normalized collective paraphrase endorsement ratings (i.e., the difference between collective and distributive endorsements for each trial), given the strong negative correlation between the two endorsement ratings ($r=-0.62$). The results also hold if we analyze the results from all three predicates in a single mixed effects regression model; we present the three separate models here for ease of interpretation.} The full regression models appear in Appendix \ref{expt3results}.
+\textsc{scenario} (``inspect'' vs.~``move''), and \textsc{trial} order; the model also included the interaction between \textsc{context} and \textsc{scenario}.\footnote{All reported results hold if instead we look at normalized collective paraphrase endorsement ratings (i.e., the difference between collective and distributive endorsements for each trial), given the strong negative correlation between the two endorsement ratings ($r=-0.62$). The results also hold if we analyze the results from all three predicates in a single mixed effects regression model; we present the three separate models here for ease of interpretation.} The full regression models appear in \ref{expt3results}.
 As is apparent in Fig.~\ref{resultsexpt2}, there was a main effect of \textsc{context} for both \emph{big} ($\beta$ = 0.18, $SE$ = 0.07, $t$ = 2.52, p $<$ 0.05) and \emph{tall} ($\beta$ = 0.30, $SE$ = 0.07, $t$ = 4.58, p $<$ 0.01), such that regular contexts had more collective interpretations than did random contexts for these predicates. The effect of \textsc{context} was not significant for \emph{heavy} ($\beta$ = 0.11, $SE$ = 0.07, $t$ = 1.43, p $=$ 0.16), but the effect of \textsc{scenario} was ($\beta$ = 0.19, $SE$ = 0.08, $t$ = 2.54, p $<$ 0.05): \emph{heavy} received more collective interpretations in ``move'' scenarios. No other effects reached significance.
 
 %, so that  ($\beta$ = 0.18, $SE$ = 0.07, $t$ = 2.70, p $<$ 0.01). The model finds a main effect of the contrast between \emph{big} and \emph{tall} ($\beta$ = 0.07, $SE$ = 0.04, $t$ = 2.00, p $<$ 0.05), driven in large part by a marginally significant interaction between \emph{tall} and \textsc{context} ($\beta$ = 0.13, $SE$ = 0.08, $t$ = 1.72, p $=$ 0.09): \emph{tall} was most affected by our contextual manipulation, yielding the greatest rates of collective interpretations in regular contexts. Finally, the model finds a significant interaction between the predicate \emph{heavy} and \textsc{scenario} ($\beta$ = 0.21, $SE$ = 0.08, $t$ = 2.77, p $<$ 0.01): 
